Update SDK versions

--- a/api-reference/endpoint/search.mdx
+++ b/api-reference/endpoint/search.mdx
@@ -1,4 +1,6 @@
 ---
-title: 'Search'
-openapi: 'POST /v0/search'
+title: "Search"
+openapi: "POST /v0/search"
 ---
+
+Send a search request to retrieve a ranked list of products.
