--- a/mcp-overview.mdx
+++ b/mcp-overview.mdx
@@ -16,7 +16,6 @@ The Channel3 MCP specifically gives your AI agents superpowers for product disco
     Build an AI that helps users find the perfect product based on their specific needs, budget, and preferences. Great for gift recommendations or comparing products across categories.
   </Card>
 
-
   <Card title="Niche Shopping Curator" icon="robot">
     Build specialized shopping assistants for specific niches (tech gear for developers, art supplies for creators, fitness equipment, etc.) with deep domain knowledge.
   </Card>
@@ -39,8 +38,7 @@ Setting up with Channel3 is easy. Get started in just a few steps:
       icon="user-plus"
       href="https://trychannel3.com/sign-up"
     >
-      Use your Google account, GitHub, or email to sign up. No credit card
-      required - <i>we're paying you, remember?</i>
+      Use your Google account, GitHub, or email to sign up.
     </Card>
   </Step>
   <Step title="Generate Your API Key">
