--- a/index.mdx
+++ b/index.mdx
@@ -7,12 +7,13 @@ title: Introduction
 Channel3 lets developers build AI shopping apps and agents. Whether you're creating a smart recommendation engine, a visual search tool, an agent that purchases products autononmously, or something totally new, Channel3 can power it.
 
 **What can you do with Channel3?**
--   **Create Your Own Catalog:** Curate a catalog of brands and products.
--   **Natural Language Search:** Search like you talk (e.g., "warm winter coat for hiking").
--   **Visual Search:** Find products with an image. This can power a visual search engine, or a visual shopping assistant.
--   **Multimodal Search:** Combine text *and* images for ultra-precise queries (e.g., "blue version of this dress" + image of the dress).
--   **Recommend Products:** Intelligently suggest items your users will love.
--   **Earn Revenue:** Monetize when your customers make purchases.
+
+- **Create Your Own Catalog:** Curate a catalog of brands and products.
+- **Natural Language Search:** Search like you talk (e.g., "warm winter coat for hiking").
+- **Visual Search:** Find products with an image. This can power a visual search engine, or a visual shopping assistant.
+- **Multimodal Search:** Combine text _and_ images for ultra-precise queries (e.g., "blue version of this dress" + image of the dress).
+- **Recommend Products:** Intelligently suggest items your users will love.
+- **Earn Revenue:** Monetize when your customers make purchases.
 
 Let's get you started!
 
@@ -22,14 +23,24 @@ Setting up with Channel3 is easy. Get started in just a few steps:
 
 <Steps>
   <Step title="Create Your Free Account">
-    First things first, you'll need a Channel3 account. This is where you'll manage your API keys, track usage, and more.
-    <Card title="Sign Up for Channel3" icon="user-plus" href="https://trychannel3.com/sign-up">
-      Use your Google account, GitHub, or email to sign up. No credit card required - <i>we're paying you, remember?</i>
+    First things first, you'll need a Channel3 account. This is where you'll
+    manage your API keys, track usage, and more.
+    <Card
+      title="Sign Up for Channel3"
+      icon="user-plus"
+      href="https://trychannel3.com/sign-up"
+    >
+      Use your Google account, GitHub, or email to sign up.
     </Card>
   </Step>
   <Step title="Generate Your API Key">
-    Your API key identifies you to Channel3. We use it to track the sales you drive, so you can get paid.
-    <Card title="Go to API Keys in Dashboard" icon="key" href="https://trychannel3.com/dashboard/api">
+    Your API key identifies you to Channel3. We use it to track the sales you
+    drive, so you can get paid.
+    <Card
+      title="Go to API Keys in Dashboard"
+      icon="key"
+      href="https://trychannel3.com/dashboard/api"
+    >
       Generate a new API key, and keep it safe.
     </Card>
   </Step>
@@ -46,13 +57,5 @@ Setting up with Channel3 is easy. Get started in just a few steps:
 </Steps>
 
 ## Next Steps
-
-Ready to start building? Choose your path based on what you're creating.
-
-<Note>
-This introduction is just the beginning. Make sure to check out:
-- The SDK quickstart guides for practical examples.
-- The API reference for in-depth details on each endpoint and data model.
-</Note>
 
 We're excited to see what you build. For help, reach out to us at [founders@trychannel3.com](mailto:founders@trychannel3.com).
